Wed 23 Feb 2022 01:03:44 PM CET <Daniel.Diaz@univ-paris1.fr>:

	* fix asm problems on macos/M1 with large sources (mapper arm64_any.c)
	* fix issue #4 : directory_files/2 now uses native Win32 functions
	* fix small problem when bootstrapping due to Makefiles
	* fix format/2-3 to throw a domain error on invalid radix

Fri Dec  3 02:42:24 CET 2021 <Daniel.Diaz@univ-paris1.fr>

	* fix issue #9: format/2-3 now also accept a list of character for format

Tue Oct 26 11:25:45 CEST 2021 <Daniel.Diaz@univ-paris1.fr>

	* fix problem in arm32 mapper when passing more than 8 double to a C function

Thu Oct 21 15:45:07 CEST 2021 <Daniel.Diaz@univ-paris1.fr>

	* fix issue #7: length/2 now emits a type_error(list) only if the strict_mode flag is off

Thu Oct 14 16:01:16 CEST 2021 <Daniel.Diaz@univ-paris1.fr>

	* fix infinite loop in debugger for multifile/dynamic predicates (issue #12)

Wed Sep 29 12:19:48 CEST 2021 <Daniel.Diaz@univ-paris1.fr>

	* improve Makefiles with patches sent by Keri Harris on July 2021

Wed Jun  9 15:20:19 CEST 2021 <Daniel.Diaz@univ-paris1.fr>

	* port to Termux on aarch64/android
	* accept clang as C compiler on x86_64/linux (use CC=clang ./configure)
	* restructure and improve the code of all MA-ASM mappers

Mon May  3 13:04:24 CEST 2021 <Daniel.Diaz@univ-paris1.fr>

	* port to arm64 (aarch64)/darwin (new Apple M1/MacOS architecture)
	* port to arm64 (aarch64)/Linux (armv8) - many thanks to
	  Jasper Taylor <jasper@simulistics.com>
	* port to arm32/Linux (armv6, armv7) - many thanks to
	  Jasper Taylor <jasper@simulistics.com>

Mon May  3 13:04:24 CEST 2021 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in absolute_file_name, '/src/../' returned '' now '/'

Fri Mar 26 15:33:49 CET 2021 <Daniel.Diaz@univ-paris1.fr>

	* add error case to findall/4 (detects when Tail is not a list)

Thu Mar 18 10:55:43 CET 2021 <Daniel.Diaz@univ-paris1.fr>

	* set eof_action to reset for standard input/output/error streams even if not a tty
